Added class library as a DTO,Repository,Service.

--- a/CreditBoard/CreditBoard.csproj
+++ b/CreditBoard/CreditBoard.csproj
@@ -270,6 +270,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Filters\" />
+    <Folder Include="Modules\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
